register window now shows error message

--- a/src/components/body/Register/Register.css
+++ b/src/components/body/Register/Register.css
@@ -10,6 +10,12 @@ body{
 }
 
 
+.errorMsg{
+  font-size: small;
+  margin: 1rem;
+  color: red
+}
+
 .coloured-section{
   display: flex;
   flex-direction: column;
