added support for numbers in passwords and passphrases

--- a/src/components/body/PassList/PassForm.css
+++ b/src/components/body/PassList/PassForm.css
@@ -6,6 +6,20 @@
     border-radius: 20%;
 }
 
+.optionsHolder{
+    margin:1rem;
+    text-align: left;
+}
+
+.passOptions{
+    margin-left: 3rem;
+    margin-right: 10px;
+}
+
+#length{
+    width: 5rem;
+}
+
 .passItem:hover{
     background-color: #0275d8;;
 }
